# ai-hedge-fund-mvp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/agents/: fundamentals.py
src/tools/: api.py
src/utils/: display.py
