[tool.poetry]
name = "ai-hedge-fund-mvp"
version = "0.1.0"
description = "MVP version of AI hedge fund - fundamental analyst agent for stock analysis"
authors = ["GitMVP"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.7"
langchain-openai = "^0.3.5"
python-dotenv = "1.0.0"
colorama = "^0.4.6"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
